test/language/spec/syntax/valid/nested_namespace.topo
// Nested namespace path

namespace engine::core::graphics {
  public:
    void render();

  protected:
    void draw();
}
