test/language/spec/syntax/invalid/forbidden_virtual.topo
// TEST: virtual keyword should be rejected
// EXPECT-ERROR: virtual

namespace app {
  public:
    virtual void run();
}
